@@ -1,5 +1,5 @@
 /*
- * $Id: misc.h,v 1.24 2007/10/21 04:17:22 sfeam Exp $
+ * $Id: misc.h,v 1.25 2008/03/31 01:47:58 sfeam Exp $
  */
 
 /* GNUPLOT - misc.h */
@@ -68,11 +68,13 @@ void get_filledcurves_style_options __PROTO((filledcurves_opts *));
 void filledcurves_options_tofile __PROTO((filledcurves_opts *, FILE *));
 void lp_parse __PROTO((struct lp_style_type *, TBOOLEAN, TBOOLEAN));
 void lp_use_properties __PROTO((struct lp_style_type *lp, int tag));
+
 void arrow_parse __PROTO((struct arrow_style_type *, TBOOLEAN));
 
 void parse_fillstyle __PROTO((struct fill_style_type *fs, int def_style,
                               int def_density, int def_pattern, int def_border ));
 void parse_colorspec __PROTO((struct t_colorspec *tc, int option));
+TBOOLEAN need_fill_border __PROTO((struct fill_style_type *fillstyle));
 
 #ifdef WITH_IMAGE
 void get_image_options __PROTO((t_image *image));
